# sync-and-swim

./: CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: publish.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_segment.rs  find_ffmpeg.rs  lib.rs  main.rs
src/components/: About.tsx  FileChoice.css  FileChoice.tsx  FileTransfer.css  FileTransfer.tsx  FindPlace.css  FindPlace.spec.ts  FindPlace.tsx  Menu.tsx  SplitFiles.css  SplitFiles.tsx
src/contexts/: ThemeContext.tsx
