[package]
name = "swim-headphones-transfer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "swim_headphones_transfer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
rsmpeg = "0.15.1+ffmpeg.7.0"
serde_json = "1"
tauri-plugin-dialog = "2"
rusty_ffmpeg = { version = "*", features = ["link_system_ffmpeg"] }
anyhow = "1.0.93"
cstr = "0.2.1"

[package.metadata.vcpkg]
rev = "4a600e9"
dependencies = ["ffmpeg"]
git = "https://github.com/microsoft/vcpkg"
