[package]
name = "sync-and-swim"
version = "0.1.0"
description = "An app for loading Shokz OpenSwim headphones with music and audiobooks"
authors = ["Brian Schiller <bgschiller@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "swim_headphones_transfer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
anyhow = "1.0.93"
log = "0.4"
tauri-plugin-log = "2"
regex = "1.10.2"
